Navbar styling adjustments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,15 +12,10 @@
 
 /********************************* HEADING *********************************/
 
-.navbar,
-.navbar-brand span,
-.navbar-toggler,
 .nav-link {
     background-color: #6b705c;
     color: #ffe8d6;
-
 }
-
 
 /********************************* SECTION *********************************/
 
@@ -30,3 +25,6 @@
     opacity: 0.9;
     padding: 10rem;
 }
+
+/********************************* FOOTER *********************************/
+
