--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,11 +20,105 @@ a:hover{
 
 /********************************* HEADING *********************************/
 
+/*************************** navbar ************************/
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.navbar-toggler:hover{
+    color: #ddbea9;
+}
+
+@media screen and (min-width: 446px) {
+    .navbar-expand-lg .navbar-nav {
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 446px) {
+    #logo{
+        display: none;
+    }
+}
+
+/*
+@media screen and (max-width: 448px) {
+.navbar-nav {
+    display: block;
+    }
+}
+*/
+
+/* sample from https://www.w3schools.com/howto/howto_js_navbar_shrink_scroll.asp */
+
+/* Create a sticky/fixed navbar */
+#navbar {
+  background-color: #6b705c;
+  overflow: hidden;
+  padding: 1.5rem 0.5rem; /* Large padding which will shrink on scroll (using JS) */
+  transition: 0.4s; /* Adds a transition effect when the padding is decreased */
+  opacity: 0.85;
+  position: fixed; /* Sticky/fixed navbar */
+  width: 100%;
+  top: 0; /* At the top */
+  z-index: 99;
+}
+
+/* Style the navbar links */
+#navbar a {
+  float: left;
+  text-align: center;
+  padding: 1rem;
+  text-decoration: none;
+  font-size: 1.12rem;
+  line-height: 1.56rem;
+  border-radius: 0.25rem;
+}
+
+#navbar .brand-name {
+    font-size: 2rem;
+}
+
+#navbar #brand {
+  font-size: 2rem;
+  font-weight: bold;
+  transition: 0.4s;
+}
+
+/* Links on mouse-over */
+#navbar a:hover {
+  background-color: #ddbea9;
+  color: #6b705c;
+}
+
+/* Display some links to the right */
+#navbar-right {
+  float: right;
+}
+
+/* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
+@media screen and (max-width: 800px) {
+  #navbar {
+    padding: 1rem 0.5rem !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
+  }
+  #navbar a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  #navbar-right {
+    float: none;
+  }
+}
 
 /********************************* SECTION *********************************/
 
 .section {
-    margin-top: 5rem;
+    margin-top: 15rem;
+    height: 40rem; /*remove this line */
     margin-bottom: 5rem;
     opacity: 0.9;
     padding: 10rem;
@@ -33,6 +127,8 @@ a:hover{
 /********************************* FOOTER *********************************/
 
 .footer{
+    margin-bottom: 0;
+    opacity: 0.9;
     padding: 1rem;
 }
 
