--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,11 @@ a:hover{
     padding: 10rem;
 }
 
+#mapid { 
+    height: 180px;
+     
+}
+
 /********************************* FOOTER *********************************/
 
 .footer{
