Fix Comment Description Onload, Removed background from css and calling from Js for the Online pages of backgrounds

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-body {
-    background-image: url('../images/colosseum-lg-bkg.jpg');
+  /*body {
+  background-image: url('../images/colosseum-lg-bkg.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
-
+*/
 /********************************* Font/Color-Scheme *********************************/
 
 .color-default{
