Adjust map size css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,8 @@ a:hover{
 }
 
 .map-div { 
-    height: 18rem;  
+    height: 12.5rem;
+    width: 18.75rem;
 }
 
 /********************************* FOOTER *********************************/
