Implemented new Leaflet map, based on Jym Linx page and Tim Nelson Sample

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,10 +146,13 @@ a:hover{
     margin-bottom: 5rem;
 }
 
-.map-div { 
-    height: 12.5rem;
-    width: 18.75rem;
+#map { 
+    /*height: 12.5rem;
+    width: 18.75rem; */
+    height: 20rem;
+    width: 30rem;
 }
+
 
 /********************************* FOOTER *********************************/
 
