--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,9 @@ a:hover{
     width: 30rem;
 }
 
-
+.btn-toggle :focus{
+    outline: none;
+}
 /********************************* FOOTER *********************************/
 
 .footer{
