--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-  /*body {
-  background-image: url('../images/colosseum-lg-bkg.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
-*/
 /********************************* Font/Color-Scheme *********************************/
 
 .color-default{
@@ -48,7 +41,7 @@ a:hover{
   background-color: #6b705c;
   overflow: hidden;
   padding: 1.5rem 0.5rem; /* Large padding which will shrink on scroll (using JS) */
-  transition: 0.4s; /* Adds a transition effect when the padding is decreased */
+  transition: 1s; /* Adds a transition effect when the padding is decreased */
   opacity: 0.85;
   position: fixed; /* Sticky/fixed navbar */
   width: 100%;
@@ -60,7 +53,7 @@ a:hover{
 #navbar a {
   float: left;
   text-align: center;
-  padding: 1rem;
+  /*padding: 1rem;*/
   text-decoration: none;
   font-size: 1.12rem;
   line-height: 1.56rem;
@@ -74,13 +67,21 @@ a:hover{
 #navbar #brand {
   font-size: 2rem;
   font-weight: bold;
-  transition: 0.4s;
+  transition: 1s;
+  text-align: center;
+  margin-left: 5rem;
 }
 
 /* Links on mouse-over */
 #navbar a:hover {
   background-color: #ddbea9;
   color: #6b705c;
+}
+
+#logo-link{
+    display: none;
+    visibility: hidden;
+    transition: 1s;
 }
 
 /* Display some links to the right */
@@ -90,7 +91,19 @@ a:hover{
 
 /*************************** @mediaScreen Navbar ************************/
 
+@media screen and (min-width: 750px) {
+    #logo-link{
+        display: block;
+        visibility: visible;
+    }
 
+    #navbar #brand {
+        text-align: center;
+        margin-left: 5rem;
+    }
+}
+
+/*
 @media screen and (max-width: 750px) {
     #logo-link{
         display: none;
@@ -98,28 +111,29 @@ a:hover{
     }
 }
 
+
 @media screen and (max-width: 575px) {
     #brand{
-        color: black; /* Remove this color */
+        color: black; /* Remove this color * /
         margin-left: 5rem;
     }
 }
-
+ 
 @media screen and (max-width: 485px) {
     #brand{
-        color: black; /* Remove this color */
+        color: black; /* Remove this color * /
         margin-left: 0;
     }
 }
-
+*/
 /* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
 @media screen and (min-width: 800px) {
   #navbar {
     padding: 1rem 0.5rem !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
   }
   #navbar a {
-    float: none;
-    display: block;
+    /*float: none;
+    display: block;*/
     text-align: center;
   }
   #navbar-right {
@@ -144,6 +158,12 @@ a:hover{
 
 .content {
     margin-bottom: 5rem;
+    /*CREDIT - https://www.w3schools.com/css/css_overflow.asp*/
+    overflow: scroll;        
+}
+
+#player{
+    overflow: scroll;
 }
 
 #map { 
@@ -151,6 +171,7 @@ a:hover{
     width: 18.75rem; */
     height: 20rem;
     width: 30rem;
+    overflow: scroll; 
 }
 
 .btn-toggle :focus{
