--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,16 @@ a:hover{
     outline: none;
     box-shadow: none;
 }
+
+.flag{
+    text-align: center;
+}
+
+.flag img{
+    margin-top: 1rem;
+    height: 200px;
+    width: 300px;
+}
 /********************************* FOOTER *********************************/
 
 .footer{
