--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,15 +175,19 @@ a:hover{
     box-shadow: none;
 }
 
+.country-details{
+    margin-top: 1rem;
+}
+
 .flag{
     text-align: center;
 }
 
 .flag img{
-    margin-top: 1rem;
-    height: 200px;
-    width: 300px;
+    width: 55%;
 }
+
+
 /********************************* FOOTER *********************************/
 
 .footer{
