Adjusted social-links appearence

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,10 @@ a:hover{
  
 }
 
+.social-links{
+    font-size: 1.4rem;
+}
+
 /********************************* FOOTER *********************************/
 
 .footer{
