--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,37 @@
 /********************************* Font/Color-Scheme *********************************/
-.color-default{
-    background-color: #6b705c;
-    color: #ffe8d6;
-    font-weight: bold;
+.color-default {
+  background-color: #6b705c;
+  color: #ffe8d6;
+  font-weight: bold;
 }
 
-.color-section{
-    background-color: #a5a58d;
-    color: #ffe8d6;
-    opacity: 0.9;
+.color-section {
+  background-color: #a5a58d;
+  color: #ffe8d6;
+  opacity: 0.9;
 }
 
-a:active, a:link, a:visited {
-    color: #ffe8d6;
+a:active,
+a:link,
+a:visited {
+  color: #ffe8d6;
 }
 
-a:hover{
-    color: #ddbea9;
+a:hover {
+  color: #ddbea9;
 }
 
 /**Credit https://stackoverflow.com/questions/20751937/transition-background-color-via-slide-animation**/
 .btn {
-    background-size: 100% 200%;
-    background-image: linear-gradient(to bottom, gray 50%, green 50%);
-    -webkit-transition: background-position 1s;
-    -moz-transition: background-position 1s;
-    transition: background-position 1s;
+  background-size: 100% 200%;
+  background-image: linear-gradient(to bottom, gray 50%, green 50%);
+  -webkit-transition: background-position 1s;
+  -moz-transition: background-position 1s;
+  transition: background-position 1s;
 }
 
 .btn:hover {
-    background-position: 0 -100%;
+  background-position: 0 -100%;
 }
 
 /********************************* HEADING *********************************/
@@ -38,164 +40,197 @@ a:hover{
 .navbar-toggler:focus,
 .navbar-toggler:active,
 .navbar-toggler-icon:focus {
-    outline: none;
-    box-shadow: none;
+  outline: none;
+  box-shadow: none;
 }
 
-.navbar-toggler:hover{
-    color: #ddbea9;
+.navbar-toggler:hover {
+  color: #ddbea9;
 }
 
 /* sample from https://www.w3schools.com/howto/howto_js_navbar_shrink_scroll.asp */
 /* Create a sticky/fixed navbar */
 #navbar {
-    background-color: #6b705c;
-    overflow: hidden;
-    padding: 1.5rem 0.5rem; /* Large padding which will shrink on scroll (using JS) */
-    transition: 1s; /* Adds a transition effect when the padding is decreased */
-    opacity: 0.85;
-    position: fixed; /* Sticky/fixed navbar */
-    width: 100%;
-    top: 0; /* At the top */
-    z-index: 99;
+  background-color: #6b705c;
+  overflow: hidden;
+  padding: 1.5rem 0.5rem; /* Large padding which will shrink on scroll (using JS) */
+  transition: 1s; /* Adds a transition effect when the padding is decreased */
+  opacity: 0.85;
+  position: fixed; /* Sticky/fixed navbar */
+  width: 100%;
+  top: 0; /* At the top */
+  z-index: 99;
 }
 
 /* Style the navbar links */
 #navbar a {
-    float: left;
-    text-align: center;
-    text-decoration: none;
-    font-size: 1.12rem;
-    line-height: 1.56rem;
-    border-radius: 0.25rem;
+  float: left;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1.12rem;
+  line-height: 1.56rem;
+  border-radius: 0.25rem;
 }
 
 #navbar .brand-name {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 #navbar #brand {
-    font-size: 2rem;
-    font-weight: bold;
-    transition: 1s;
-    text-align: center;
-    margin-left: 5rem;
+  font-size: 2rem;
+  font-weight: bold;
+  transition: 1s;
+  text-align: center;
+  margin-left: 5rem;
 }
 
 /* Links on mouse-over */
 #navbar a:hover {
-    background-color: #ddbea9;
-    color: #6b705c;
+  background-color: #ddbea9;
+  color: #6b705c;
 }
 
-#logo-link{
-    display: none;
-    visibility: hidden;
-    transition: 1s;
+#logo-link {
+  display: none;
+  visibility: hidden;
+  transition: 1s;
 }
 
 /* Display some links to the right */
 #navbar-right {
-    float: right;
+  float: right;
 }
 
 /*************************** @mediaScreen Navbar ************************/
-@media screen and (min-width: 750px) {
-    #logo-link{
-        display: block;
-        visibility: visible;
-    }
 
-    #navbar #brand {
-        text-align: center;
-        margin-left: 5rem;
-    }
+@media screen and (min-width: 446px) {
+  .navbar-nav {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 750px) {
+  #logo-link {
+    display: block;
+    visibility: visible;
+  }
+
+  #navbar #brand {
+    text-align: center;
+    margin-left: 5rem;
+  }
 }
 
 /* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
 @media screen and (min-width: 800px) {
-    #navbar {
-        padding: 1rem 0.5rem !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
-    }
-    #navbar a {
-        text-align: center;
-    }
-    #navbar-right {
-        float: none;
-    }
-}
-
-@media screen and (min-width: 446px) {
-    .navbar-nav {
-        display: flex;
-    }
+  #navbar {
+    padding: 1rem 0.5rem !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
+  }
+  #navbar a {
+    text-align: center;
+  }
+  #navbar-right {
+    float: none;
+  }
 }
 
 /********************************* SECTION *********************************/
-.place-selector{
-    margin-bottom: 1rem;
-    margin-top: 15rem;
-    padding-bottom: 1rem;
-    padding-top: 1rem;
+.place-selector {
+  margin-bottom: 1rem;
+  margin-top: 15rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
 }
 
 .content {
-    margin-bottom: 5rem;
-    /*CREDIT - https://www.w3schools.com/css/css_overflow.asp*/
-    overflow: auto;
+  margin-bottom: 5rem;
+  width: fit-content;
+  /*CREDIT - https://www.w3schools.com/css/css_overflow.asp
+    overflow: auto;*/
 }
 
-#map { 
-    height: 20rem;
-    width: 30rem;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+/*
+.full-width {
+  width: 100vw;
+  position: relative;margin-left: -50vw;
+  left: 0;
+  right: 0;
+}
+*/
+.video-map {
+  margin-top: 1rem;
 }
 
-.btn-toggle :focus{
-    outline: none;
-    box-shadow: none;
+#player {
+  height: 25rem;
+ /*Credit https://stackoverflow.com/questions/46651831/how-to-fit-youtube-video-size-with-div-container*/
+  
 }
 
-.country-details{
-    margin-top: 1rem;
+.map-container{
+    height: 25rem;
+    /*width: 30rem;*/
+    position: relative; padding-bottom:0; /* 16:9 */  padding-top: 25px;
+}
+#map {
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width:100%; 
+    height:100%; 
 }
 
-.flag{
-    text-align: center;
+.btn-toggle :focus {
+  outline: none;
+  box-shadow: none;
 }
 
-.flag img{
-    width: 55%;
+.country-details {
+  margin-top: 1rem;
+}
+
+.flag {
+  text-align: center;
+}
+
+.flag img {
+  width: 55%;
 }
 
 /*Credit: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp*/
 #btnTop {
-    opacity: 1;
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 1rem; /* Place the button at the bottom of the page */
-    right: 2rem; /* Place the button 2rem from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 1rem;/* Some padding */
-    border-radius: 2rem; /* Rounded corners */
-    font-size: 1rem; /* Increase font size */
+  opacity: 1;
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 1rem; /* Place the button at the bottom of the page */
+  right: 2rem; /* Place the button 2rem from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 1rem; /* Some padding */
+  border-radius: 2rem; /* Rounded corners */
+  font-size: 1rem; /* Increase font size */
 }
 /* End Credit */
 
-.social-links{
-    font-size: 1.4rem;
+.social-links {
+  font-size: 1.4rem;
 }
 
 /********************************* FOOTER *********************************/
-.footer{
-    margin-bottom: 0;
-    opacity: 0.9;
-    padding: 1rem;
+.footer {
+  margin-bottom: 0;
+  opacity: 0.9;
+  padding: 1rem;
 }
 
-.footer div{
-    font-weight: normal;
+.footer div {
+  font-weight: normal;
 }
