--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,18 +136,19 @@ a:hover {
 
 /********************************* SECTION *********************************/
 .place-selector {
+  position: sticky;
   margin-bottom: 1rem;
-  margin-top: 15rem;
+  top: 10rem;
   padding-bottom: 1rem;
   padding-top: 1rem;
+  z-index: 98;
 }
 
 .content {
   margin-bottom: 5rem;
-  width: fit-content;
-  /*CREDIT - https://www.w3schools.com/css/css_overflow.asp
-    overflow: auto;*/
-}
+  margin-top: 12rem;
+  padding-top: 1rem;
+  }
 
 ul {
   list-style-type: none;
@@ -167,22 +168,24 @@ ul {
 }
 
 #player {
+  margin-top: 1rem;
   height: 25rem;
- /*Credit https://stackoverflow.com/questions/46651831/how-to-fit-youtube-video-size-with-div-container*/
-  
 }
 
-.map-container{
-    height: 25rem;
-    /*width: 30rem;*/
-    position: relative; padding-bottom:0; /* 16:9 */  padding-top: 25px;
+.map-container {
+  height: 25rem;
+  margin-bottom: 1rem;
+  /*Credit https://stackoverflow.com/questions/46651831/how-to-fit-youtube-video-size-with-div-container*/
+  position: relative;
+  padding-bottom: 0;
+  padding-top: 25px;
 }
 #map {
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    width:100%; 
-    height:100%; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .btn-toggle :focus {
