--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ a:visited {
 
 a:hover {
   color: #ddbea9;
+  transform: scale(1.2);
 }
 
 /**Credit https://stackoverflow.com/questions/20751937/transition-background-color-via-slide-animation**/
@@ -86,9 +87,10 @@ a:hover {
 
 /* Links on mouse-over */
 #navbar a:hover {
-  background-color: #ddbea9;
-  color: #6b705c;
+  text-shadow: 1px 1px #b7b7a4;
+  transform: scale(1.2);
 }
+
 
 #logo-link {
   display: none;
@@ -249,6 +251,10 @@ ul {
 
 .social-links {
   font-size: 1.4rem;
+}
+
+.social-links i:hover {
+  transform: scale(1.3);
 }
 
 /********************************* FOOTER *********************************/
