--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ a:hover {
   }
 }
 
-@media screen and (min-width: 1080) {
+@media screen and (min-width: 1080px) {
   #navbar #brand {
     font-size: 2rem;
   }
