--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,6 +283,10 @@ ul {
           transform: scale(1.3);
 }
 
+/********************************* Contact *********************************/
+.contact-form {
+ padding: 1rem;
+}
 /********************************* FOOTER *********************************/
 .footer {
   margin-bottom: 0;
