Removed about page, using single page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
 * Browsers: last 4 version
 */
 
+html {
+  scroll-behavior: smooth;
+}
+
 /********************************* Font/Color-Scheme *********************************/
 .color-default {
   background-color: #6b705c;
