--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,7 @@ ul {
   padding: 1rem; /* Some padding */
   border-radius: 2rem; /* Rounded corners */
   font-size: 1rem; /* Increase font size */
+  text-shadow: 2px 2px 4px #000000;
 }
 /* End Credit */
 
