--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,14 +31,20 @@ a:visited {
 a:hover {
   color: #ddbea9;
   -webkit-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-          transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 /**Credit https://stackoverflow.com/questions/20751937/transition-background-color-via-slide-animation**/
 .btn {
   background-size: 100% 200%;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, gray), color-stop(50%, green));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(50%, gray),
+    color-stop(50%, green)
+  );
   background-image: -o-linear-gradient(top, gray 50%, green 50%);
   background-image: linear-gradient(to bottom, gray 50%, green 50%);
   -webkit-transition: background-position 1s;
@@ -58,7 +64,7 @@ a:hover {
 .navbar-toggler-icon:focus {
   outline: none;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 .navbar-toggler:hover {
@@ -109,10 +115,9 @@ a:hover {
 #navbar a:hover {
   text-shadow: 1px 1px #b7b7a4;
   -webkit-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-          transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
 }
-
 
 #logo-link {
   display: none;
@@ -204,14 +209,7 @@ ul {
   margin: 0;
   padding: 0;
 }
-/*
-.full-width {
-  width: 100vw;
-  position: relative;margin-left: -50vw;
-  left: 0;
-  right: 0;
-}
-*/
+
 .video-map {
   margin-top: 1rem;
 }
@@ -240,7 +238,7 @@ ul {
 .btn-toggle :focus {
   outline: none;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 .country-details {
@@ -284,14 +282,15 @@ ul {
 
 .social-links i:hover {
   -webkit-transform: scale(1.3);
-      -ms-transform: scale(1.3);
-          transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
 }
 
-/********************************* Contact *********************************/
+/********************************* CONTACT *********************************/
 .contact-form {
- padding: 1rem;
+  padding: 1rem;
 }
+
 /********************************* FOOTER *********************************/
 .footer {
   margin-bottom: 0;
