Add FontFamily to css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ html {
 }
 
 /********************************* Font/Color-Scheme *********************************/
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .color-default {
   background-color: #6b705c;
   color: #ffe8d6;
